# azuresqlenforcer

./: Makefile  SetDevEnvironmentVaribate_Cgywin.bat  buildDev  buildPcv  buildRelease  configure  configure.orig  setEnv  targets
install/: DAEforSQLServer.ism  Makefile
install/DAEforSQLServer/Script Files/: Setup.rul
install/help/: README.txt
prod/: targets
prod/QATestTools/SQLTestTool/: CommonFun.cs  DBConnection.cs  FormMain.Designer.cs  FormMain.cs  Log.cs  Program.cs  SQLTestTool.csproj  TestCfg.cs  TestExecuter.cs  TestInstance.cs
prod/QATestTools/SQLTestTool/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
prod/QATestTools/SQLTestTool/config/: conf.xml
prod/pep/AzureSQLPEP/: AzureSQLPEP.sln
prod/pep/AzureSQLPEP/Install/: register_proxy.bat  register_rls.bat  unregister_proxy.bat  unregister_rls.bat
prod/pep/AzureSQLPEP/NXL2RLS/: ColumnInfo.cs  CommonFun.cs  Config.cs  DBConnection.cs  DBInfo.cs  EnforceDBManager.cs  IniFileOperator.cs  Log.cs  Makefile.inc  NXL2RLS.csproj  ObCondition.cs  ObMaskField.cs  ObRecordFilter.cs  ObUserFilter.cs  Obligation.cs  Policy.cs  Program.cs  QueryPolicy.cs  RLS.cs  RLSBackup.cs  TableInfo.cs
prod/pep/AzureSQLPEP/NXL2RLS/Properties/: AssemblyInfo.cs
prod/pep/AzureSQLPEP/NXL2RLS/config/: config.ini
prod/pep/AzureSQLPEP/NXL2RLS/funtemplate/: IntCompare  StringCompare
prod/pep/AzureSQLPEP/NXL2RLSSrv/: IniFileOperator.cs  Log.cs  Makefile  Makefile.inc  NXL2RLSSrv.Designer.cs  NXL2RLSSrv.cs  NXL2RLSSrv.csproj  Program.cs
prod/pep/AzureSQLPEP/NXL2RLSSrv/Properties/: AssemblyInfo.cs
prod/pep/AzureSQLPEP/ProxyCommon/: Makefile.inc  ProxyCommon.vcxproj  ProxyCommon.vcxproj.filters
prod/pep/AzureSQLPEP/ProxyCommon/include/: CommonFunc.h  Log.h  MemoryCache.h  MemoryCacheItem.h
prod/pep/AzureSQLPEP/ProxyCommon/src/: CommonFunc.cpp  INIReader.cpp  Log.cpp  MemoryCache.cpp  MemoryCacheItem.cpp
prod/pep/AzureSQLPEP/ProxyFrame/: Makefile.inc  frame.vcxproj  frame.vcxproj.filters
prod/pep/AzureSQLPEP/ProxyFrame/include/: FrameServer.h  SQLProxyWrapper.h  TcpSocket.h  UdpSocket.h  frame.h
prod/pep/AzureSQLPEP/ProxyFrame/src/: FrameServer.cpp  SQLProxyWrapper.cpp  TcpSocket.cpp  UdpSocket.cpp  dllmain.cpp  frame.cpp  stdafx.cpp
prod/pep/AzureSQLPEP/ProxyMain/: Makefile.inc  ProxyMain.vcxproj  ProxyMain.vcxproj.filters  main.rc
prod/pep/AzureSQLPEP/ProxyMain/include/: Resource.h
prod/pep/AzureSQLPEP/ProxyMain/src/: main.cpp
prod/pep/AzureSQLPEP/ProxyWorker/: Makefile.inc  ProxyWorker.vcxproj
prod/pep/AzureSQLPEP/ProxyWorker/src/: main.cpp
prod/pep/AzureSQLPEP/SQLProxy/: Makefile.inc  SQLProxy.vcxproj  SQLProxy.vcxproj.filters
prod/pep/AzureSQLPEP/SQLProxy/include/: CertificateHelper.h  Config.h  CycleTaskManager.h  Log.h  ProxyChannel.h  ProxyDataAnalysis.h  ProxyDataMgr.h  ProxyManager.h  ProxyTask.h  SQLProxyExport.h  TCPFrame.h
prod/pep/AzureSQLPEP/SQLProxy/src/: Base64.cpp  CertificateHelper.cpp  Config.cpp  CycleTaskManager.cpp  Log.cpp  ProxyChannel.cpp  ProxyDataAnalysis.cpp  ProxyDataMgr.cpp  ProxyManager.cpp  ProxyTask.cpp  SQLProxyExport.cpp  TCPFrame.cpp
prod/pep/AzureSQLPEP/SQLTDS/: Makefile.inc  SQLTDS.vcxproj  SQLTDS.vcxproj.filters
prod/pep/AzureSQLPEP/SQLTask/: Makefile.inc  ReadMe.txt  SQLTask.vcxproj  SQLTask.vcxproj.filters
prod/pep/AzureSQLPEP/certificate/: readme.txt  tdsproxy.pinta.com.pfx  tdsproxy.vmsssqlth000001.com.pfx
prod/pep/AzureSQLPEP/config/: config.ini
prod/pep/EnforcerModule/: CMakeLists.txt  CMakeSettings.json
prod/pep/EnforcerModule/DAEBootstrap/: CMakeLists.txt  Makefile.inc
prod/pep/EnforcerModule/DAEBootstrap/include/: CertificateHelper.h  DAEServiceMgr.h  SQLServerInstanceHelper.h  TDSConfigCheck.h  WorkerPolicyCacheCheck.h  check_result_enum.h  daeccpolicymgr_dll_wrapper_class.h  logger_class.h  query_cloudaz_sdk_cpp_wrapper_class.h  util_funcs.h
prod/pep/EnforcerModule/DAEBootstrap/src/: CertificateHelper.cpp  DAEServiceMgr.cpp  SQLServerInstanceHelper.cpp  TDSConfigCheck.cpp  UdpSocket.cpp  WorkerPolicyCacheCheck.cpp  daeccpolicymgr_dll_wrapper_class.cpp  main.cpp  query_cloudaz_sdk_cpp_wrapper_class.cpp
prod/pep/EnforcerModule/DAECCPolicyMgr/: CMakeLists.txt
prod/pep/EnforcerModule/DAECCPolicyMgr/include/: PolicyEngine.h  tool.h
prod/pep/EnforcerModule/DAECCPolicyMgr/src/: PolicyEngine_windows.cpp  PolicyExport.cpp  tool.cpp
prod/pep/EnforcerModule/DAECommon/: CMakeLists.txt  Makefile.inc
prod/pep/EnforcerModule/DAECommon/include/: DAELog.h  EMDBConfig.h  EMDBType.h  EMMaskDef.h  SqlException.h  commfun.h  enforcerwrapper.h
prod/pep/EnforcerModule/DAECommon/src/: DAEEncryptTool.cpp  DAELog.cpp  EMDBConfig.cpp  commfun.cpp  enforcerwrapper.cpp  use_default.rc
prod/pep/EnforcerModule/DAEEncryptTool/: CMakeLists.txt  Makefile.inc
prod/pep/EnforcerModule/DAEEncryptTool/src/: main.cpp
prod/pep/EnforcerModule/DAESQLEnforcer/: CMakeLists.txt  Makefile.inc
prod/pep/EnforcerModule/DAESQLEnforcer/include/: DAESqlServerSDK.h  QueryCAZPolicyOpr.h  default_schema_cache_manager.h  emdb_result_sdk.h  enforcermgr.h  sqlenforcer_export.h  userattrwrapper.h  usercontextinfo.h
prod/pep/EnforcerModule/DAESQLEnforcer/src/: DAESqlServerSDK.cpp  QueryCAZPolicyOpr.cpp  emdb_sdk.cpp  enforcermgr.cpp  policymgrwrapper.cpp  sqlenforcer_export.cpp  userattrwrapper.cpp  usercontextinfo.cpp
prod/pep/EnforcerModule/DAESQLParser/: CMakeLists.txt  Makefile.inc
prod/pep/EnforcerModule/DAESQLParser/include/: EMColumnRef.h  Interface.h  node.h  parser.h
prod/pep/EnforcerModule/DAESQLParser/src/: TableRef.cpp  node.cpp  nodeimpl.cpp  resolve.cpp
prod/pep/EnforcerModule/DAEUnitTest/: CMakeLists.txt  DAESQLEnforcer.cpp  DAESQLEnforcer.h  enforcerwrapper.cpp  enforcerwrapper.h
prod/pep/EnforcerModule/DAEUserAttributes/: CMakeLists.txt  Makefile.inc
prod/pep/EnforcerModule/DAEUserAttributes/include/: userattr.h  userattr_export.h
prod/pep/EnforcerModule/DAEUserAttributes/src/: WinAD.cpp  userattr.cpp  userattr_export.cpp  userattr_mgr.cpp
prod/pep/EnforcerModule/source/: config.ini
(+76 files in other folders)
